--- a/basics/ex03/public/index.html
+++ b/basics/ex03/public/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>#ex02</title>
+<title>#ex03</title>
 </head>
 <body>
     <div id='root'></div>
-    <script src='App.js'></script>
-    <script src='index.js'></script>
+    <script type='module' src='App.js'></script>
+    <script type='module' src='index.js'></script>
 </body>
 </html>
