webpack practices ex#2

--- a/basics/webpack-practices/ex01/public/index.html
+++ b/basics/webpack-practices/ex01/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>#ex04</title>
+<title>webpack-#ex01</title>
 </head>
 <body>
     <div id='root'></div>
