--- a/basics/webpack-practices/ex02/public/index.html
+++ b/basics/webpack-practices/ex02/public/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>#ex04</title>
+<title>webpack-#ex02</title>
 </head>
 <body>
     <div id='root'></div>
-    <script src='main.js'></script>
+    <script src='bundle.js'></script>
 </body>
 </html>
