--- a/02.component/guestbook/public/index.html
+++ b/02.component/guestbook/public/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Kanban Board-#ex01</title>
+<link rel='stylesheet' type='text/css' href='styles.css'>
+<title>Guestbook</title>
 </head>
 <body>
     <div id='root'></div>
